[project]
name = "maproxylib"
version = "0.1.0"
description = "Transparent access to nested objects dictionary fields via descriptors."
readme = "README.md"
authors = [{ name = "Artem Netkachev", email = "arnetkachev@yandex.ru" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["descriptor", "dictionary", "proxy", "mapping", "dataclass", "nested", "fields"]
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
